@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 31-07-2006 added: [ 1440803 ] Associate Profiles with AV pack. thanks to markeen. will be documented on http://xbmc.xbox-scene.com/wiki/ soonish.
  - 31-07-2006 fixed: some minor trainer related issues.
  - 31-07-2006 fixed: master user login timestamp wasn't saved.
  - 31-07-2006 changed: autoexec.py is hidden in the script window (clutter). use the filemanager for testing.
